[package]
name = "rnet"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
threadpool = "1.8.1"
tokio = { version = "1.43.0", features = ["full"] }
eframe = { version = "0.31", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence", "wayland"] }
egui_plot = "0.31.0"

# [features]
# gui = ["dep:eframe"]